--- a/Client/.gitignore
+++ b/Client/.gitignore
@@ -33,6 +33,7 @@
 npm-debug.log
 testem.log
 /typings
+/src/environments/.env.*
 
 # e2e
 /e2e/*.js
@@ -44,3 +45,4 @@ Thumbs.db
 package-lock.json
 
 yarn-error.log
+
